Улучшил код, добавил IORuntimeException