@@ -1,5 +1,6 @@
 package org.example.reader;
 
+import org.example.exception.IORuntimeException;
 import org.example.model.Order;
 
 import java.io.IOException;
@@ -8,12 +9,12 @@ import java.nio.file.Paths;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class HashOrderReader implements OrderReader {
 
     private static final DateTimeFormatter FORMATTER =
             DateTimeFormatter.ofPattern("yyyy-MM-dd'T'HH:mm:ss");
+
 
     @Override
     public List<Order> readOrders(String filePath) {
@@ -22,15 +23,15 @@ public class HashOrderReader implements OrderReader {
                     .filter(line -> !line.trim().isEmpty())
                     .map(line -> {
                         String[] parts = line.split("#");
-                        LocalDateTime timestamp = LocalDateTime.parse(parts[0].trim(), FORMATTER);
-                        String company = parts[1].trim();
-                        int quantity = Integer.parseInt(parts[2].trim());
+                        LocalDateTime timestamp = LocalDateTime.parse(parts[TIMESTAMP_INDEX].trim(), FORMATTER);
+                        String company = parts[COMPANY_INDEX].trim();
+                        int quantity = Integer.parseInt(parts[QUANTITY_INDEX].trim());
 
                         return new Order(timestamp, company, quantity);
                     })
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (IOException e) {
-            throw new RuntimeException("Ошибка чтения файла: " + filePath, e);
+            throw new IORuntimeException("Ошибка чтения файла: " + filePath, e);
         }
     }
 }
